tests/negative/neg_pr115_var_package_item.safe
package neg_pr115_var_package_item

   type counter is range 0 to 10;

   var value : counter = 0;


